[gd_scene load_steps=4 format=3 uid="uid://dmlft7p7ergla"]

[ext_resource type="Texture2D" uid="uid://dfhhnxtq1ojty" path="res://Textures/White16.png" id="1_fiy5s"]
[ext_resource type="Script" path="res://SaveDataStat.gd" id="2_7cu8k"]
[ext_resource type="Theme" uid="uid://dj5rm07ftvajr" path="res://Theme_Cell.tres" id="2_tr6ys"]

[node name="SaveDataStat" type="TextureRect"]
self_modulate = Color(0.116112, 0.201789, 0.199241, 1)
custom_minimum_size = Vector2(0, 60)
size_flags_vertical = 4
texture = ExtResource("1_fiy5s")
script = ExtResource("2_7cu8k")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Label_SizeValue" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
theme = ExtResource("2_tr6ys")
theme_override_font_sizes/font_size = 30
text = "[XxX]"

[node name="Label_Size" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tr6ys")
theme_override_font_sizes/font_size = 30
text = "â€¢"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Label_Played" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tr6ys")
theme_override_font_sizes/font_size = 30
text = "Played:"

[node name="Label_PlayedValue" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(80, 0)
layout_mode = 2
theme = ExtResource("2_tr6ys")
theme_override_font_sizes/font_size = 30
text = "[XX]"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Label_Success" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tr6ys")
theme_override_font_sizes/font_size = 30
text = "Success:"

[node name="Label_SuccessValue" type="Label" parent="HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme = ExtResource("2_tr6ys")
theme_override_font_sizes/font_size = 30
text = "[XX/XX]"

[node name="MarginContainer4" type="MarginContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2

[node name="Label_AvgScore" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tr6ys")
theme_override_font_sizes/font_size = 30
text = "Average Score:"

[node name="Label_AvgScoreValue" type="Label" parent="HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tr6ys")
theme_override_font_sizes/font_size = 30
text = "[XX%]"
